# projeto_API_BLOG

./: BANCO_DIO.py  pyproject.toml
API_FLASK_DIO_BANK/: pyproject.toml
API_FLASK_DIO_BANK/migrations/versions/: 0a304df325d1_initial_migrate.py
API_FLASK_DIO_BANK/src/: utils.py
API_FLASK_DIO_BANK/src/controllers/: role.py  user.py
instance/: blog.sqlite
migrations/versions/: 8b40860c3014_initial_migration.py
src/: app.py  db.py  utils.py
src/controllers/: auth.py  post.py  user.py
tests/integrations/: conftest.py
tests/integrations/controllers/: test_user.py
tests/unit/: test_utils.py
